prevent input field from zooming on mobile devices

--- a/src/components/ContactForm/contactForm.scss
+++ b/src/components/ContactForm/contactForm.scss
@@ -34,11 +34,8 @@ main {
       letter-spacing: 1px;
       border: 1px solid #171e27;
       border-radius: 0;
-
-      @media (max-width: 500px) {
-        font-size: 15px;
-      }
     }
+
     textarea {
       min-height: 180px;
     }
